--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "body-parser": "^1.15.2",
         "dotenv": "^8.2.0",
         "express": "^4.12.4",
-        "mongodb": "~3.6.0",
-        "mongoose": "~5.9.13"
+        "mongodb": "^3.6.0",
+        "mongoose": "^5.9.13"
     },
     "repository": {
         "type": "git",
